Fix layout duplicato e aggiunta colonne mancanti (data, stato, reparto)

--- a/cartella-clinica-app/src/app/app.html
+++ b/cartella-clinica-app/src/app/app.html
@@ -1,7 +1,7 @@
-<app-lista-pazienti></app-lista-pazienti>
+<div style="padding: 20px;">
+  <app-aggiungi-paziente></app-aggiungi-paziente>
 
-<router-outlet></router-outlet>
+  <hr style="margin: 30px 0;">
 
-<app-aggiungi-paziente></app-aggiungi-paziente>
-
-<hr> <app-lista-pazienti></app-lista-pazienti>
+  <app-lista-pazienti></app-lista-pazienti>
+</div>
