--- a/cartella-clinica-app/src/app/components/lista-pazienti/lista-pazienti.html
+++ b/cartella-clinica-app/src/app/components/lista-pazienti/lista-pazienti.html
@@ -23,6 +23,30 @@
       <td mat-cell *matCellDef="let p"> {{p.cognome}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="dataIngresso">
+      <th mat-header-cell *matHeaderCellDef> Data Ingresso </th>
+      <td mat-cell *matCellDef="let p"> {{p.dataIngresso}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="stato">
+      <th mat-header-cell *matHeaderCellDef> Stato </th>
+      <td mat-cell *matCellDef="let p"> {{p.stato}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="idReparto">
+      <th mat-header-cell *matHeaderCellDef> Reparto (ID) </th>
+      <td mat-cell *matCellDef="let p"> {{p.idReparto}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="azioni">
+      <th mat-header-cell *matHeaderCellDef> Azioni </th>
+      <td mat-cell *matCellDef="let p">
+        <button mat-icon-button color="warn" (click)="elimina(p.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
