Aggiunta navigazione completa: Scelta Area -> Login -> Lista Pazienti

--- a/cartella-clinica-app/src/app/app.html
+++ b/cartella-clinica-app/src/app/app.html
@@ -1,7 +1,1 @@
-<div style="padding: 20px;">
-  <app-aggiungi-paziente></app-aggiungi-paziente>
-
-  <hr style="margin: 30px 0;">
-
-  <app-lista-pazienti></app-lista-pazienti>
-</div>
+<router-outlet></router-outlet>
