--- a/cartella-clinica-app/src/app/components/lista-pazienti/lista-pazienti.html
+++ b/cartella-clinica-app/src/app/components/lista-pazienti/lista-pazienti.html
@@ -1,67 +1,101 @@
-<div class="container">
-  <h2>Elenco Pazienti</h2>
+<div class="page-container">
 
-  <mat-form-field appearance="outline" style="width: 100%;">
-    <mat-label>Cerca per nome o cognome</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Es. Mario" #input>
-  </mat-form-field>
+  <mat-toolbar color="primary" class="app-toolbar">
+    <button mat-icon-button (click)="tornaIndietro()">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span>Reparto: <strong>{{ repartoCorrente }}</strong></span>
+    <span class="spacer"></span>
+    <mat-icon>local_hospital</mat-icon>
+  </mat-toolbar>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div class="content-wrapper">
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let p"> {{p.id}} </td>
-    </ng-container>
+    <mat-accordion>
+      <mat-expansion-panel class="panel-inserimento">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon style="margin-right: 10px;">person_add</mat-icon>
+            Nuovo Paziente / Modifica
+          </mat-panel-title>
+          <mat-panel-description>
+            Clicca qui per inserire o modificare i dati
+          </mat-panel-description>
+        </mat-expansion-panel-header>
 
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let p"> {{p.nome}} </td>
-    </ng-container>
+        <app-aggiungi-paziente></app-aggiungi-paziente>
 
-    <ng-container matColumnDef="cognome">
-      <th mat-header-cell *matHeaderCellDef> Cognome </th>
-      <td mat-cell *matCellDef="let p"> {{p.cognome}} </td>
-    </ng-container>
+      </mat-expansion-panel>
+    </mat-accordion>
 
-    <ng-container matColumnDef="dataIngresso">
-      <th mat-header-cell *matHeaderCellDef> Data Ingresso </th>
-      <td mat-cell *matCellDef="let p"> {{p.dataIngresso}} </td>
-    </ng-container>
+    <br>
 
-    <ng-container matColumnDef="stato">
-      <th mat-header-cell *matHeaderCellDef> Stato </th>
-      <td mat-cell *matCellDef="let p"> {{p.stato}} </td>
-    </ng-container>
+    <mat-card class="table-card mat-elevation-z8">
 
-    <ng-container matColumnDef="idReparto">
-      <th mat-header-cell *matHeaderCellDef> Reparto (ID) </th>
-      <td mat-cell *matCellDef="let p"> {{p.idReparto}} </td>
-    </ng-container>
+      <div class="search-header">
+        <mat-form-field appearance="outline" style="width: 100%;">
+          <mat-label>Cerca paziente...</mat-label>
+          <mat-icon matPrefix>search</mat-icon>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Es. Mario Rossi" #input>
+        </mat-form-field>
+      </div>
 
-    <ng-container matColumnDef="azioni">
+      <table mat-table [dataSource]="dataSource">
 
-      <th mat-header-cell *matHeaderCellDef> Azioni </th>
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let p"> {{p.id}} </td>
+        </ng-container>
 
-      <td mat-cell *matCellDef="let p">
+        <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let p"> <strong>{{p.nome}}</strong> </td>
+        </ng-container>
 
-        <button mat-icon-button color="primary" (click)="modifica(p)" style="margin-right: 8px;">
-          <mat-icon>edit</mat-icon>
-        </button>
+        <ng-container matColumnDef="cognome">
+          <th mat-header-cell *matHeaderCellDef> Cognome </th>
+          <td mat-cell *matCellDef="let p"> <strong>{{p.cognome}}</strong> </td>
+        </ng-container>
 
-        <button mat-icon-button color="warn" (click)="elimina(p.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
+        <ng-container matColumnDef="dataIngresso">
+          <th mat-header-cell *matHeaderCellDef> Data Ingresso </th>
+          <td mat-cell *matCellDef="let p"> {{p.dataIngresso}} </td>
+        </ng-container>
 
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="stato">
+          <th mat-header-cell *matHeaderCellDef> Stato </th>
+          <td mat-cell *matCellDef="let p">
+            <span class="badge-stato">{{p.stato}}</span>
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <ng-container matColumnDef="idReparto">
+          <th mat-header-cell *matHeaderCellDef> Reparto ID </th>
+          <td mat-cell *matCellDef="let p"> {{p.idReparto}} </td>
+        </ng-container>
 
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="3" style="padding: 20px; text-align: center;">
-        Nessun paziente corrisponde alla ricerca "{{input.value}}"
-      </td>
-    </tr>
-  </table>
+        <ng-container matColumnDef="azioni">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Azioni </th>
+          <td mat-cell *matCellDef="let p" style="text-align: center;">
+            <button mat-icon-button color="primary" (click)="modifica(p)" matTooltip="Modifica">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="elimina(p.id)" matTooltip="Elimina">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="riga-paziente"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="7" style="padding: 20px; text-align: center; color: gray;">
+            Nessun paziente trovato per "{{input.value}}"
+          </td>
+        </tr>
+      </table>
+    </mat-card>
+
+  </div>
 </div>
