--- a/cartella-clinica-app/src/app/components/login/login.css
+++ b/cartella-clinica-app/src/app/components/login/login.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #eceff1;
+  background-color: #ebe6dc;
 }
 
 .login-card {
