--- a/cartella-clinica-app/src/app/components/scelta-area/scelta-area.css
+++ b/cartella-clinica-app/src/app/components/scelta-area/scelta-area.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh; /* Altezza schermo intero */
-  background-color: #eceff1;
+  background-color: #ebe6dc;
 }
 
 .main-card {
