--- a/cartella-clinica-app/src/app/components/dashboard/dashboard.html
+++ b/cartella-clinica-app/src/app/components/dashboard/dashboard.html
@@ -77,7 +77,7 @@
     <mat-card class="card-reparto" matRipple (click)="vaiAlReparto('Diagnostica')">
       <mat-icon class="icona-reparto grigio-scuro">biotech</mat-icon>
       <mat-card-title>Diagnostica</mat-card-title>
-      <mat-card-subtitle>Esami Diagnostici</mat-card-subtitle>
+      <mat-card-subtitle>Esami Diagnostici - (TAC, Radiografia, Ecografia, Radiografia)</mat-card-subtitle>
     </mat-card>
 
     <mat-card class="card-reparto" matRipple (click)="vaiAlReparto('Geriatria')">
